--- a/style.css
+++ b/style.css
@@ -1,82 +1,116 @@
-body{
+body {
     margin: 0;
     padding: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-    
-        
-    }
-    
-    
-    .formulario{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.login_form {
+    min-height: 20%;
+    min-width: 30%;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 400px;
-    background-color: silver;
-    border-radius: 10px;
-    }
-    .formulario h1{
+    width: 300px;
+    background-color: rgb(255, 255, 255);
+    border: 1.5px groove rgb(87, 89, 92);
+    border-top: 5px groove rgb(0, 0, 0);
+    border-radius: 20px;
+    box-shadow:  5px 5px 10px rgb(142, 138, 138);
+}
+
+.login_form h2 {
     text-align: center;
     padding: 0 0 20px 0;
-    border-bottom: 1px solid white;
-    }
-    
-    .formulario form{
-        padding: 0 40px;
-        box-sizing: border-box;
-        }
-        
-        form .username{
-            position: relative;
-            border-bottom: 2px solid black;
-            margin: 30px 0;
-            }
-    
-    .username inpu{
+    margin-top: 10px;
+    border-bottom: 2px groove rgb(142, 138, 138);
+}
+
+.login_form form {
+    padding: 0 50px;
+    box-sizing: border-box;
+}
+
+form #user_name,
+#password_user {
+    position: relative;
+    border: 2px ridge rgb(174, 170, 170);
+    margin-bottom: 15px;
+}
+
+form #user_name:hover,
+#password_user:hover {
+    padding: 0 5px;
+    box-shadow: 0 0 15px rgb(174, 170, 170);
+}
+
+form label {
+    position: relative;
+    justify-content: left;
+    margin-top: 5px;
+    color: black;
+    font-size: 16px;
+    pointer-events: fill;
+    transition: .5s;
+    display: inline-block;
+}
+
+form input {
     width: 100%;
     padding: 0 5px;
     height: 40px;
     font-size: 16px;
+    border-radius: 10px;
     border: none;
     outline: none;
-    }
+}
 
-    form .password{
-        position: relative;
-        border-bottom: 2px solid black;
-        margin: 30px 0;
-        }
-    
-    .username label{
-    position: absolute;
-    top: 50%;
-    left: 5px;
-    color: black;
-    transform: translateY(-50%);
+
+.button_login {
+    appearance: none;
+    background-color: transparent;
+    border: 0.125em solid #1A1A1A;
+    border-radius: 0.9375em;
+    box-sizing: border-box;
+    color: #3B3B3B;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 16px;
+    font-weight: 600;
+    line-height: normal;
+    margin: 0;
+    min-height: 3em;
+    min-width: 0;
+    outline: none;
+    padding: 0.5em 2em;
+    text-align: center;
+    text-decoration: none;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    will-change: transform;
+    margin: 20px 0;
+}
+
+.button_login:disabled {
     pointer-events: none;
-    transition: .5s; 
-    }
-    
-    .username span::before{
-    content: '';
-    position: absolute;
-    top: 40px;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background: white;
-    }
-    
-    .nombreUsuario input:focus ~ label,
-    .nombreUsuario input:valid ~ label{
-        top: -5px;
-        color: #6C3483;
-        transition: top 0.3s ease, color 0.3s ease;
-    }
-    
-    .username input:focus ~ span::before,
-    .username input:focus ~ span::before{
-        width:100% ;
-    }
+}
+
+.button_login:hover {
+    color: #fff;
+    background-color: #1A1A1A;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    transform: translateY(-2px);
+}
+
+.button_login:active {
+    box-shadow: none;
+    transform: translateY(0);
+}
+
+.estiloPop {
+    border-radius: 10px;
+    background-color: #f0f0f0;
+}
